tests/requests/valid/024.http
GET /test HTTP/1.0\r\n
Host: 0.0.0.0:5000\r\n
User-Agent: ApacheBench/2.3\r\n
Accept: */*\r\n
X-Forwarded-Protocol: https\r\n
\r\n
